// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Skill  Skill --->level = familiar 1`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Familiar
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = familiar 2`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Familiar
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = familiar 3`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Familiar
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = proficient 1`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span />
    <span />
    <span />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Proficient
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = proficient 2`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = proficient 3`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = understand 1`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = understand 2`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;

exports[`renders Skill  Skill --->level = understand 3`] = `
<div
  className="skill"
>
  <div>
    <div
      className="subTitle"
    >
      5
       
      years
    </div>
  </div>
  <div
    className="level"
  >
    <span />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <span
      className="empty"
    />
    <div
      className="levelName"
    >
      Understand
    </div>
  </div>
</div>
`;
